force-app/main/default/objects/Payment_Schedule__c/fields/Auto_Demand_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Demand_Date__c</fullName>
    <description>Date on which the system should automatically raise a demand for this payment schedule. Used by the AutoDemandBatch scheduled job.</description>
    <label>Auto Demand Date</label>
    <type>Date</type>
</CustomField>