force-app/main/default/objects/Payment_Schedule__c/fields/Demand_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Date__c</fullName>
    <label>Demand Date</label>
    <type>Date</type>
</CustomField>