force-app/main/default/objects/Payment_Schedule__c/fields/GST_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount_Paid__c</fullName>
    <description>Total GST amount paid against this payment schedule</description>
    <label>GST Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>