force-app/main/default/objects/Payment_Schedule__c/fields/GST_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount_Pending__c</fullName>
    <description>Remaining GST amount pending for this payment schedule</description>
    <label>GST Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>