force-app/main/default/objects/Payment_Schedule__c/fields/Interest_Pending__c.field-meta.xml
<CustomField>
    <fullName>Interest_Pending__c</fullName>
    <label>Interest Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>