force-app/main/default/objects/Payment_Schedule__c/fields/Interest_Waive_Off_Approval__c.field-meta.xml
<CustomField>
    <fullName>Interest_Waive_Off_Approval__c</fullName>
    <label>Interest Waive Off Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>