force-app/main/default/objects/Payment_Schedule__c/fields/Is_Custom__c.field-meta.xml
<CustomField>
    <fullName>Is_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom</label>
    <type>Checkbox</type>
</CustomField>