force-app/main/default/objects/Payment_Schedule__c/fields/Is_Milestone_Based__c.field-meta.xml
<CustomField>
    <fullName>Is_Milestone_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Milestone Based</label>
    <type>Checkbox</type>
</CustomField>