force-app/main/default/objects/Payment_Schedule__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>Days_Overdue__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>