force-app/main/default/objects/Payment_Schedule__c/fields/Is_Time_Based__c.field-meta.xml
<CustomField>
    <fullName>Is_Time_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Time Based</label>
    <type>Checkbox</type>
</CustomField>