force-app/main/default/objects/Payment_Schedule__c/fields/Last_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Last_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>