force-app/main/default/objects/Payment_Schedule__c/fields/Master_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Master_Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Payment Schedule</label>
    <referenceTo>Master_Payment_Schedule__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>