force-app/main/default/objects/Payment_Schedule__c/fields/Milestone_Completion__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completion__c</fullName>
    <label>Milestone Completion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>