force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Schedule_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Amount__c</fullName>
    <description>Base amount excluding GST for this payment schedule</description>
    <label>Payment Schedule Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>