force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Schedule_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Amount_Paid__c</fullName>
    <description>Total base amount paid against this payment schedule</description>
    <label>Base Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>