force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Schedule_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Amount_Pending__c</fullName>
    <description>Remaining base amount pending for this payment schedule</description>
    <label>Base Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>