force-app/main/default/objects/Payment_Schedule__c/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <label>S No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>