force-app/main/default/objects/Payment_Schedule__c/fields/TDS_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>TDS_Amount_Paid__c</fullName>
    <description>Total TDS amount paid against this payment schedule</description>
    <label>TDS Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>