force-app/main/default/objects/Payment_Schedule__c/fields/TDS_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>TDS_Amount_Pending__c</fullName>
    <description>Remaining TDS amount pending for this payment schedule</description>
    <label>TDS Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>